--- a/src/app/pages/students/student-list/student-list.component.html
+++ b/src/app/pages/students/student-list/student-list.component.html
@@ -22,7 +22,7 @@
 
         <div class="ibox-body" style="font-size: 11px;">
 
-          <ngx-datatable #table class="data-table material table-sm table-bordered table-striped table-responsive"
+          <ngx-datatable #table class="data-table material"
             [columnMode]="'force'" [scrollbarH]="true" [headerHeight]="50" [footerHeight]="40" [rowHeight]="40"
             [scrollbarV]="false" [rows]="rows" [limit]="15">
 
