--- a/src/app/pages/students/add-student/add-student.component.html
+++ b/src/app/pages/students/add-student/add-student.component.html
@@ -9,7 +9,7 @@
                 <a class="ibox-collapse">
                   <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
                   <!-- <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i> -->
-                  <i class="fa fa-angle-right arrow" aria-hidden="true"></i>
+                  <i class="fa fa-angle-down arrow" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
@@ -20,6 +20,18 @@
                     <div class="col-md-12 mb-3">
                         <h6 class="h6 font-weight-bold">Student Information</h6>
                     </div>
+
+                    <!-- <form class="example-form"> -->
+                    <!-- <div class="col-sm-3">
+                        <mat-form-field class="example-full-width">
+                          <input matInput placeholder="Favorite food" value="Sushi">
+                        </mat-form-field>
+                      
+                        <mat-form-field class="example-full-width">
+                          <textarea matInput placeholder="Leave a comment"></textarea>
+                        </mat-form-field>
+                    </div>     -->
+                    <!-- </form> -->
 
                     <div class="col-sm-3">
                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
