--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700");
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 
 .clf:after, .clf:before {
   content: '';
