--- a/src/app/pages/students/edit-student/edit-student.component.html
+++ b/src/app/pages/students/edit-student/edit-student.component.html
@@ -31,7 +31,7 @@
                 <form id="edit-student-form" [formGroup]="editStudentForm" (ngSubmit)="onEditStudentSubmit()">
                     <div class="row student-info">
                         <div class="col-md-12 mb-3">
-                            <h6 class="h6 font-weight-bold">Student Information</h6>
+                            <h6 class="h6 font-weight-bold sub-heading">Student Information</h6>
                         </div>
 
                         <div class="col-sm-3">
@@ -167,7 +167,7 @@
 
                     <div class="row">
                         <div class="col-md-12 mb-3 mt-2">
-                            <h5 class="h6 font-weight-bold">Parent Information</h5>
+                            <h5 class="h6 font-weight-bold sub-heading">Parent Information</h5>
                         </div> 
 
                         <div class="col-sm-3">
