--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3624,3 +3624,16 @@ table.dataTable {
     .nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover{
       border-color: #042954 #042954 #042954;
     }
+    
+  .sub-heading{
+      position: relative;
+  }
+  .sub-heading::after{
+      position: absolute;
+      content: '';
+      bottom: -18px;
+      left: 0%;
+      width: 40px;
+      height: 3px;
+      background: #042954;
+  }
