--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -67,10 +67,12 @@
         <div class="ibox-head">
           <div class="ibox-title">Fees Collection & Expenses</div>
           <div class="ibox-tools">
-            <!-- <a class="ibox-collapse">
-                        <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
-                        <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
-                    </a> -->
+            <a class="ibox-collapse">
+              <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
+              <!-- <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i> -->
+              <i class="fa fa-angle-down arrow" aria-hidden="true"></i>
+            </a>
+
           </div>
         </div>
 
@@ -91,10 +93,11 @@
         <div class="ibox-head">
           <div class="ibox-title">Students Chart</div>
           <div class="ibox-tools">
-            <!-- <a class="ibox-collapse">
-                        <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
-                        <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
-                    </a> -->
+            <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
+            <a class="ibox-collapse">
+              <!-- <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i> -->
+              <i class="fa fa-angle-down arrow" aria-hidden="true"></i>
+            </a>
           </div>
         </div>
 
@@ -118,7 +121,8 @@
           <div class="ibox-tools">
             <a class="ibox-collapse">
               <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
-              <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
+              <!-- <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i> -->
+              <i class="fa fa-angle-down arrow" aria-hidden="true"></i>
             </a>
           </div>
         </div>
@@ -147,7 +151,8 @@
               <div class="ibox-tools">
                 <a class="ibox-collapse">
                   <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
-                  <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
+                  <!-- <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i> -->
+                  <i class="fa fa-angle-down arrow" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
@@ -194,7 +199,8 @@
               <div class="ibox-tools">
                 <a class="ibox-collapse">
                   <i class="fa fa-refresh mr-1 text-success refresh-icon" aria-hidden="true"></i>
-                  <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i>
+                  <!-- <i class="fa fa-times text-danger close-icon" aria-hidden="true"></i> -->
+                  <i class="fa fa-angle-down arrow" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
