--- a/src/app/pages/students/student-list/student-list.component.css
+++ b/src/app/pages/students/student-list/student-list.component.css
@@ -75,3 +75,42 @@
   border: 1px solid #d8d8d8;
   background-color: #f5f5f5;
 }
+
+
+.ibox .ibox-body {
+  padding: 0 !important;
+}
+
+.ngx-datatable.material {
+  box-shadow: none !important;
+}
+
+.ngx-datatable *,
+.ngx-datatable ::before,
+.ngx-datatable ::after {
+  line-height: 14px;
+}
+
+
+.ngx-datatable .datatable-body .datatable-row-wrapper {
+  border-bottom: 1px solid whitesmoke;
+}
+
+.ngx-datatable.fixed-header .datatable-header .datatable-header-inner .datatable-header-cell {
+  font-size: 14px;
+}
+
+.ngx-datatable .datatable-header .datatable-header-cell .datatable-header-cell-template-wrap {
+  line-height: 21px;
+}
+
+.ngx-datatable.material .datatable-footer .datatable-pager .datatable-icon-left,
+.ngx-datatable.material .datatable-footer .datatable-pager .datatable-icon-skip,
+.ngx-datatable.material .datatable-footer .datatable-pager .datatable-icon-right,
+.ngx-datatable.material .datatable-footer .datatable-pager .datatable-icon-prev {
+  line-height: 28px;
+}
+
+.ngx-datatable.fixed-row .datatable-scroll .datatable-body-row .datatable-body-cell {
+  font-size: 13px;
+}
