upload and edit form done

--- a/src/app/pages/students/student-list/student-list.component.html
+++ b/src/app/pages/students/student-list/student-list.component.html
@@ -20,10 +20,10 @@
           </div>
         </div>
 
-        <div class="ibox-body" style="font-size: 11px;">
+        <div class="ibox-body" style="font-size: 10px;">
 
-          <ngx-datatable class="material" [columnMode]="'force'" [scrollbarH]="true" [headerHeight]="50" [footerHeight]="40"
-            [rowHeight]="40" [scrollbarV]="false" [rows]="rows" [limit]="15">
+          <ngx-datatable class="material striped" [columnMode]="'force'" [scrollbarH]="true" [headerHeight]="50"
+            [footerHeight]="50" [rowHeight]="50" [scrollbarV]="false" [rows]="rows" [limit]="12">
 
 
             <ngx-datatable-column [width]="20" [sortable]="false">
