--- a/src/app/pages/students/add-student-details/add-student-details.component.css
+++ b/src/app/pages/students/add-student-details/add-student-details.component.css
@@ -1,41 +1,50 @@
 .refresh-icon {
-    font-size: 9.2px;
+  font-size: 9.2px;
 }
 
 .close-icon {
-    font-size: 10.8px;
+  font-size: 10.8px;
 }
 
-.form-group-label{
-    position: relative;
+.form-group-label {
+  position: relative;
 }
 
-.form-group-label label{
-    position: absolute;
-    visibility: hidden;
+.form-group-label label {
+  position: absolute;
+  visibility: hidden;
 }
 
-.form-group-label .form-control{
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
+.form-group-label .form-control {
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 0px;
 }
 
-.form-group-label .form-control:focus label{
-    position: relative !important;
-    font-size: 50% !important;
-    opacity: 0.7 !important;
-    top: -20px;
-    transform: translate3d(0, -100%, 0);
-    visibility: visible;
+.form-group-label .form-control:focus label {
+  position: relative !important;
+  font-size: 50% !important;
+  opacity: 0.7 !important;
+  top: -20px;
+  transform: translate3d(0, -100%, 0);
+  visibility: visible;
 }
 
-.mdl-textfield__label:after{
-    bottom: 10px !important;
+.mdl-textfield__label:after {
+  bottom: 10px !important;
 }
 
-.mdl-textfield__label{
-    color: rgba(0, 0, 0, 1) !important;
-    font-size: 11px;
+.mdl-textfield__label {
+  color: rgba(0, 0, 0, 1) !important;
+  font-size: 11px;
 }
 
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
