--- a/src/app/pages/students/edit-student/edit-student.component.html
+++ b/src/app/pages/students/edit-student/edit-student.component.html
@@ -866,7 +866,7 @@
                 <div class="col-md-12 mt-4">
                   <div class="form-group">
                     <button class="btn btn-success btn-lg" type="submit">Update</button>
-                    <button class="btn btn-primary btn-lg">Reset</button>
+                    <!-- <button class="btn btn-primary btn-lg">Reset</button> -->
                   </div>
                 </div>
               </div>
