student add page input change

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -128,12 +128,7 @@
         </div>
         <div class="ibox-body">
           <div class="w-100">
-            <ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next" [displayMonths]="displayMonths"
-              [navigation]="arrows" class="w-100"></ngb-datepicker>
-            <!-- <ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next" [displayMonths]="displayMonths"
-              [navigation]="arrows" style="width:100%;">
-            </ngb-datepicker> -->
-            <!-- <ngb-datepicker #dp (navigate)="date = $event.next"></ngb-datepicker> -->
+            <ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next" [displayMonths]="displayMonths" [navigation]="" class="w-100"></ngb-datepicker>
           </div>
         </div>
       </div>
