--- a/src/app/pages/students/add-student-details/add-student-details.component.html
+++ b/src/app/pages/students/add-student-details/add-student-details.component.html
@@ -415,7 +415,7 @@
               <div class="col-md-12 mt-4">
                 <div class="form-group">
                   <button class="btn btn-success btn-lg" type="submit">Submit</button>
-                  <button class="btn btn-primary btn-lg">Reset</button>
+                  <button class="btn btn-primary btn-lg" (click)="resetForm()">Reset</button>
                 </div>
               </div>
             </div>
