--- a/src/app/pages/students/add-student/add-student.component.html
+++ b/src/app/pages/students/add-student/add-student.component.html
@@ -335,7 +335,7 @@
               <div class="col-md-12 mt-4">
                 <div class="form-group">
                   <button class="btn btn-success btn-lg" type="submit">Register</button>
-                  <button class="btn btn-primary btn-lg">Reset</button>
+                  <button class="btn btn-primary btn-lg" (click)="resetForm()">Reset</button>
                 </div>
               </div>
             </div>
