hash routing done

--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -36,7 +36,7 @@
       <form class="navbar-search" action="javascript:;">
         <div class="rel">
           <span class="search-icon"><i class="ti-search"></i></span>
-          <input class="form-control" placeholder="Search here...">
+          <input type="text" class="form-control" placeholder="Search here..." (keyup)="searchMenu($event)">
         </div>
       </form>
     </li>
