--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -17,101 +17,118 @@
   <div class="tab-content" id="nav-tabContent">
     <div id="menu1" class="tab-pane show active" role="tabpanel" aria-labelledby="menu1-tab"><br>
       <ul class="side-menu metismenu">
-        <li routerLinkActive="active">
+        <li routerLinkActive="active" id="enrollment" #enrollment>
           <a href="javascript:;">
             <i class="sidebar-item-icon ti-save"></i>
               <span class="nav-label">Enrollment</span>
             <i class="fa fa-angle-right arrow"></i>
           </a>
           <ul class="nav-2-level collapse" routerLinkActive="in">
-            <li>
+
+            <li id="student-admission">
               <a [routerLink]="['/students/add']" routerLinkActive="active">
                 <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
                 Student Admission
               </a>
             </li>
-            <li>
+
+            <li id="bulk-upload">
               <a routerLink="" routerLinkActive="active">
                 <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
                 Bulk Upload</a>
             </li>
-            <li>
+
+            <li id="registration">
               <a routerLink="" routerLinkActive="active"><span class="submenu-arrow">
                 <i class="ti-angle-right"></i></span>User
                 Registration</a>
             </li>
-            <li>
+
+            <li id="enquery">
               <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Admission
                 Enquery</a>
             </li>
+
           </ul>
         </li>
-        <li routerLinkActive="active">
+
+        <li routerLinkActive="active" id="fee-management">
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-edit"></i>
             <span class="nav-label">Fee Management</span><i class="fa fa-angle-right arrow"></i>
           </a>
         </li>
-        <li routerLinkActive="active">
+
+        <li routerLinkActive="active" id="student-management">
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-table"></i>
             <span class="nav-label">Student Management</span><i class="fa fa-angle-right arrow"></i></a>
           <ul class="nav-2-level" routerLinkActive="in">
-            <li>
+
+            <li id="update-student">
               <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Update
                 Student</a>
             </li>
-            <li>
+
+            <li id="view-student">
               <a [routerLink]="['/students/list']" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View
                 Student</a>
             </li>
-            <li>
-              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Roll
-                No Assign</a>
+
+            <li id="roll-no-assign">
+              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Roll No Assign</a>
             </li>
-            <li>
-              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Attandance
-                Report</a>
+
+            <li id="attandance-report">
+              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Attandance Report</a>
             </li>
-            <li>
-              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View
-                Time Table</a>
+            
+            <li id="view-time-table">
+              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View Time Table</a>
             </li>
+
           </ul>
         </li>
-        <li routerLinkActive="active">
+        <li routerLinkActive="active" id="teacher-activities">
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-bar-chart"></i>
             <span class="nav-label">Teacher Activities</span><i class="fa fa-angle-right arrow"></i>
           </a>
         </li>
-        <li routerLinkActive="active">
+
+        <li routerLinkActive="active" id="examination-management">
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-map"></i>
             <span class="nav-label">Examination Management</span><i class="fa fa-angle-right arrow"></i></a>
         </li>
-        <li>
+
+        <li id="user-managements">
           <a routerLink="/ui/icons" routerLinkActive="active"><i class="sidebar-item-icon fa fa-smile-o"></i>
             <span class="nav-label">User Managements</span>
           </a>
         </li>
-        <li routerLinkActive="active">
+
+        <li routerLinkActive="active" id="notifications-&-events">
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-envelope"></i>
             <span class="nav-label">Notifications & Events</span><i class="fa fa-angle-right arrow"></i>
           </a>
         </li>
-        <li>
+
+        <li id="transport-management">
           <a routerLink="/calendar" routerLinkActive="active"><i class="sidebar-item-icon fa fa-calendar"></i>
             <span class="nav-label">Transport Management</span>
           </a>
         </li>
-        <li routerLinkActive="active">
+
+        <li routerLinkActive="active" id="finance-management">
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-file-text"></i>
             <span class="nav-label">Finance Management</span><i class="fa fa-angle-right arrow"></i>
           </a>
         </li>
-        <li>
+
+        <li id="leave-management">
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
             <span class="nav-label">Leave Management</span><i class="fa fa-angle-right arrow"></i>
           </a>
         </li>
-        <li>
+
+        <li id="certificates-management">
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
             <span class="nav-label">Certificates Management</span><i class="fa fa-angle-right arrow"></i>
           </a>
