some issue fixed

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4778,7 +4778,7 @@ body.fixed-layout.sidebar-mini .content-wrapper {
   -webkit-transition: margin .2s ease-in-out;
   -o-transition: margin .2s ease-in-out;
   transition: margin .2s ease-in-out;
-  min-height: 1200px;
+  min-height: 100%;
 }
 
 .page-header {
