--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -20,32 +20,37 @@
         <li routerLinkActive="active" id="enrollment" #enrollment>
           <a href="javascript:;">
             <i class="sidebar-item-icon ti-save"></i>
-              <span class="nav-label">Enrollment</span>
+            <span class="nav-label">Enrollment</span>
             <i class="fa fa-angle-right arrow"></i>
           </a>
           <ul class="nav-2-level collapse" routerLinkActive="in">
 
-            <li id="student-admission">
-              <a [routerLink]="['/students/add']" routerLinkActive="active">
-                <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
+            <li id="student-admission" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <a [routerLink]="['/students/add']">
+                <span class="submenu-arrow">
+                  <i class="ti-angle-right"></i>
+                </span>
                 Student Admission
               </a>
             </li>
 
-            <li id="bulk-upload">
-              <a routerLink="" routerLinkActive="active">
-                <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
-                Bulk Upload</a>
+            <li id="bulk-upload" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <a class="text-secondary">
+                <span class="submenu-arrow">
+                  <i class="ti-angle-right"></i>
+                </span>
+                Bulk Upload
+              </a>
             </li>
 
-            <li id="registration">
-              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow">
-                <i class="ti-angle-right"></i></span>User
+            <li id="registration" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <a class="text-secondary"><span class="submenu-arrow">
+                  <i class="ti-angle-right"></i></span>User
                 Registration</a>
             </li>
 
-            <li id="enquery">
-              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Admission
+            <li id="enquery" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <a class="text-secondary"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Admission
                 Enquery</a>
             </li>
 
@@ -56,6 +61,14 @@
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-edit"></i>
             <span class="nav-label">Fee Management</span><i class="fa fa-angle-right arrow"></i>
           </a>
+          <!-- <ul class="nav-2-level collapse" routerLinkActive="in">
+            <li id="student-admission">
+              <a [routerLink]="['/students/add']" routerLinkActive="active">
+                <span class="submenu-arrow"><i class="ti-angle-right"></i></span>
+                Student Admission
+              </a>
+            </li>
+          </ul> -->
         </li>
 
         <li routerLinkActive="active" id="student-management">
@@ -63,26 +76,33 @@
             <span class="nav-label">Student Management</span><i class="fa fa-angle-right arrow"></i></a>
           <ul class="nav-2-level" routerLinkActive="in">
 
-            <li id="update-student">
-              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Update
+            <li id="update-student" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <a class="text-secondary"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Update
                 Student</a>
             </li>
 
-            <li id="view-student">
-              <a [routerLink]="['/students/list']" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View
+            <li id="view-student" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <a [routerLink]="['/students/list']" class="text-secondary"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>
+                View
                 Student</a>
             </li>
 
-            <li id="roll-no-assign">
-              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Roll No Assign</a>
+            <li id="roll-no-assign" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <a class="text-secondary"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>
+                Roll
+                No Assign</a>
             </li>
 
-            <li id="attandance-report">
-              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>Attandance Report</a>
+            <li id="attandance-report" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <a class="text-secondary"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>
+                Attandance
+                Report</a>
             </li>
-            
-            <li id="view-time-table">
-              <a routerLink="" routerLinkActive="active"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>View Time Table</a>
+
+            <li id="view-time-table" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <a class="text-secondary"><span class="submenu-arrow"><i class="ti-angle-right"></i></span>
+                View
+                Time Table</a>
             </li>
 
           </ul>
