--- a/src/app/pages/students/add-student/add-student.component.css
+++ b/src/app/pages/students/add-student/add-student.component.css
@@ -51,3 +51,31 @@
   color: rgba(0, 0, 0, 1) !important;
   font-size: 11px;
 }
+
+
+
+
+
+
+
+
+.image-preview-input {
+  position: relative;
+  overflow: hidden;
+  margin: 0px;
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+.image-preview-input input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
