--- a/src/app/pages/students/student-list/student-list.component.html
+++ b/src/app/pages/students/student-list/student-list.component.html
@@ -2,6 +2,44 @@
   <div class="row">
     <div class="col-md-12">
 
+      <div class="form-group text-right">
+          <button class="btn btn-success btn-sm cursor-point" (click)="exportAsXLSX()" type="submit"><i class="fa fa-download" aria-hidden="true"></i>
+            Export To Excel</button>
+      </div>
+
+      <!-- <div class="row">
+          <div class="col-sm-2">
+              <mat-form-field class="example-full-width">
+                  <mat-select placeholder="Select Class">
+                    <mat-option *ngFor="" [value]="">
+                      
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+          </div>
+          <div class="col-sm-2">
+              <mat-form-field class="example-full-width">
+                  <mat-select placeholder="Select Section">
+                    <mat-option *ngFor="" [value]="">
+                      
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+          </div>
+          <div class="col-sm-2">
+              <mat-form-field class="example-full-width">
+                  <mat-select placeholder="Select Stream">
+                    <mat-option *ngFor="" [value]="">
+                      
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+          </div>
+          <div class="col-sm-2">
+              <button class="btn btn-success btn-sm" type="submit">Reset</button>
+          </div>           
+      </div> -->
+
       <div class="ibox">
         <div class="ibox-head">
           <div class="ibox-title">All Students</div>
